--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ layout: home
 ---
 <p>This is the basic starting point for your site homepage. The web convention is to 
     name the homepage file (and the "home" of any subdirectory) <code>index.html</code>.</p>
+<p>This is my edit. I had to sign in to do this, which was a little weird but we got the dev working eventually.</p>
