home page update 2

--- a/index.html
+++ b/index.html
@@ -2,26 +2,16 @@
 title: Soup's On
 layout: home
 ---
-<p><em>We can have HTML here bc the file is a .HTML.</em>
-    We're about to work with MarkDown though, so that should be fun. Here is some dummy text.</p>
-<p><img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/11526fd4-68d1-4799-9ab9-4e85cbcbba3f/de7akex-933729b7-6edd-4b9a-b402-af02c56cd5c7.png" alt="CC image of herbs"></p>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
-    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
-    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet 
-    a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+<p><em>Breakfast is ready. Lunch is on the table. Dinner is served.</em>
+    Welcome to the world of food, experienced through me, Claire.</p>
 
-    Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean 
-    leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, 
-    feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. 
-    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. 
-    Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque 
-    sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante 
-    tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci 
-    eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. 
-    Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.</p>
     <ul>
         <li>Breakfast</li>
         <Li>Lunch</Li>
         <li>Dinner</li>
     </ul>
+    
+<p><img src="https://i.ibb.co/x0CSYwT/Claire-s-Food.png" alt="Image of a collage of food Claire has eaten, including deep dish pizza, oysters, beautiful salad, and roasted garlic."></p>
+<p>This food archive was inspired by my love of food: tasting and eating. While recipes are not featured on this site, many of the foods I discuss I have personally made. Some recipes come from 
+    cookbooks, some from friends, some from a quick Google search: "easy vegetarian recipes that taste good."</p>
+  
