--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 ---
-title: Soup's On
+title: Claire Eats
 layout: home
 ---
 
 <p><img src="https://i.ibb.co/x0CSYwT/Claire-s-Food.png" alt="Image of a collage of food Claire has eaten, including deep dish pizza, oysters, beautiful salad, and roasted garlic."></p>
 <p><em>Breakfast is ready. Lunch is on the table. Dinner is served.</em>
     Welcome to the world of food, experienced through me, Claire.</p>
+    <p>This food archive is inspired by my love of food: tasting and eating. While recipes are not featured on this site, many of the foods I discuss I have personally made. Some recipes come from 
+        cookbooks, some from friends, some from a quick Google search: "easy vegetarian recipes that taste good."</p>
 
-<h2>List of Meals</h2>
+<h2>Soup's On</h2>
 {% for meal in site.food %}
     <h3>{{ meal.title }}</h3>
     <p><img src="{{ meal.image }}" alt="alt text here" /></p>
@@ -15,7 +17,3 @@ layout: home
     <p>Category: {{ meal.category }}</p>
 
 {% endfor %}
-
-<p>This food archive is inspired by my love of food: tasting and eating. While recipes are not featured on this site, many of the foods I discuss I have personally made. Some recipes come from 
-    cookbooks, some from friends, some from a quick Google search: "easy vegetarian recipes that taste good."</p>
-  
