hopefully homepage fixw we'll see

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@ layout: home
 <p><em>Breakfast is ready. Lunch is on the table. Dinner is served.</em></p>
 <p><img src="https://i.ibb.co/x0CSYwT/Claire-s-Food.png" alt="Image of a collage of food Claire has eaten, including deep dish pizza, oysters, beautiful salad, and roasted garlic."></p>
 
-    <p>Welcome to the world of food, experienced through me, Claire.</p>
-    <p>This food archive is inspired by my love of food: tasting and eating. While recipes are not featured on this site, many of the foods I discuss I have personally made. Some recipes come from 
-        cookbooks, some from friends, some from a quick Google search: "easy vegetarian recipes that taste good."</p>
+<p>Welcome to the world of food, experienced through me, Claire.</p>
+<p>This food archive is inspired by my love of food: tasting and eating. While recipes are not featured on this site, many of the foods I discuss I have personally made. Some recipes come from cookbooks, some from friends, some from a quick Google search: "easy vegetarian recipes that taste good."</p>
 
 <h2>Soup's On</h2>
 {% for meal in site.food %}
